# goit-cs-hw-03

./: .dockerignore  .gitignore  Makefile  README.MD  docker-compose.yml
fast-api/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
fast-api/app/: database.py  main.py  models.py  schemas.py
fast-api/migrations/: env.py  seed.py
fast-api/migrations/versions/: 001_initial_migration.py  3809dce2527a_add_created_at_prop_to_users.py  3ac6f861b7f5_add_created_at_property_to_users.py
nginx/: nginx.conf
nginx/conf.d/: api.conf
task_1/: README.MD  pyproject.toml  requirements.txt  seed.py  setup.py
task_1/sql/: add_task.sql  count_by_status.sql  delete_task.sql  find_users.sql  incomplete_tasks.sql  init.sql  tasks_by_domain.sql  tasks_by_status.sql  tasks_no_description.sql  update_status.sql  update_username.sql  user_tasks.sql  users_in_progress.sql  users_no_tasks.sql  users_task_count.sql
task_1/utils/: __init__.py  connect.py  decorators.py
task_2/: README.MD  main.py  pyproject.toml  requirements.txt
